# crypto-skills

./: .gitignore  PROMPT.md  README.md  crypto-trading-advisor.skill  pyproject.toml  requirements.txt
crypto-backtest/: README.md  SKILL.md
crypto-backtest/src/: backtest.py  pair_trading.py  smart_dca.py
crypto-trading-advisor/: README.md
examples/: example_usage.py
src/: __init__.py  backtest_engine.py  code_generator.py  data_fetcher.py  indicators.py  report_generator.py  skill.py  strategy_schema.py
